--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
 
     <!--custom css file link -->
-    <link rel="stylesheet" href="C:\Users\Asus\OneDrive\Desktop\new\style.css">
+    <link rel="stylesheet" href="/style.css">
 
 
 </head>
@@ -67,7 +67,7 @@
                     <a href="#" class="btn">order now</a>
                  </div>
                     <div class="image">
-                        <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\roses\bunch of roses.png" width= "500"  height="500"alt="">
+                        <img src="/roses/bunch of roses.png" width= "500"  height="500"alt="">
 
                     </div>
              </div>   
@@ -79,7 +79,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\roses\red-rose.png" width= "500"  height="500" alt="">
+                       <img src="/roses/red-rose.png" width= "500"  height="500" alt="">
 
                    </div>
             </div>
@@ -91,7 +91,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\roses\white rose.png" width= "500"  height="500" alt="">
+                       <img src="/roses/white rose.png" width= "500"  height="500" alt="">
 
                    </div>
             </div>
@@ -103,7 +103,7 @@
 
 <!--home section ends -->
 
-<!--Flowers section starts-->
+<!--Bouquet section starts-->
 <section class="flowers" id="flowers">
     <h3 class="sub-heading"> our flowers </h3>
     <h1 class="heading"> Popular bouquets </h3>
@@ -111,7 +111,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\bouquet\bouquet1.jpg"  width= "500"  height="500" alt="">
+                <img src="/bouquet/bouquet1.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\bouquet\bouquet2.jpg"  width= "500"  height="500" alt="">
+                <img src="/bouquet/bouquet2.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -141,7 +141,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\bouquet\bouquet3.jpg"  width= "500"  height="500" alt="">
+                <img src="/bouquet/bouquet3.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -156,7 +156,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\bouquet\bouquet4.jpg"  width= "500"  height="500" alt="">
+                <img src="/bouquet/bouquet4.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -171,7 +171,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\bouquet\bouquet5.jpg"  width= "500"  height="500" alt="">
+                <img src="/bouquet/bouquet5.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -186,7 +186,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="C:\Users\Asus\OneDrive\Desktop\new\Images\bouquet\bouquet6.jpg"  width= "500"  height="500" alt="">
+                <img src="/bouquet/bouquet6.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -204,7 +204,9 @@
 
 </section>
 
-<!--Flowers section ends-->
+<!--Bouquet section ends-->
+
+
 
 
 
