--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
 
     <!--custom css file link -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -67,7 +67,7 @@
                     <a href="#" class="btn">order now</a>
                  </div>
                     <div class="image">
-                        <img src="/roses/bunch of roses.png" width= "500"  height="500"alt="">
+                        <img src="roses/bunch of roses.png" width= "500"  height="500"alt="">
 
                     </div>
              </div>   
@@ -79,7 +79,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="/roses/red-rose.png" width= "500"  height="500" alt="">
+                       <img src="roses/red-rose.png" width= "500"  height="500" alt="">
 
                    </div>
             </div>
@@ -91,7 +91,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="/roses/white rose.png" width= "500"  height="500" alt="">
+                       <img src="roses/white rose.png" width= "500"  height="500" alt="">
 
                    </div>
             </div>
@@ -111,7 +111,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="/bouquet/bouquet1.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet1.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="/bouquet/bouquet2.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet2.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -141,7 +141,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="/bouquet/bouquet3.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet3.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -156,7 +156,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="/bouquet/bouquet4.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet4.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -171,7 +171,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="/bouquet/bouquet5.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet5.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -186,7 +186,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="/bouquet/bouquet6.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet6.jpg"  width= "500"  height="500" alt="">
                 <h3>Collection of flowers</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -203,10 +203,47 @@
         </div>
 
 </section>
-
 <!--Bouquet section ends-->
 
+<!-- about section starts  -->
 
+<section class="about" id="about">
+
+    <h3 class="sub-heading"> about us </h3>
+    <h1 class="heading"> why choose us? </h1>
+
+    <div class="row">
+
+        <div class="image">
+            <img src="Images/Logo.jpg" alt="">
+        </div>
+
+        <div class="content">
+            <h3>The most Beautiful flowers in the world</h3>
+            <p> Flower messages have varied over the centuries. Not only are they beautiful and appealing to the eye, but they play an important role in the health of your plants. In today’s blog, we will discuss the importance of flowers in our life.</p>
+            <p>Flowers celebrate love, comfort in sorrow, congratulations in achievement and friendship.</p>
+            <div class="icons-container">
+                <div class="icons">
+                    <i class="fas fa-shipping-fast"></i>
+                    <span>free delivering of beauty </span>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-dollar-sign"></i>
+                    <span>easy payments</span>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-headset"></i>
+                    <span>20/7 service</span>
+                </div>
+            </div>
+            <a href="#" class="btn">learn more</a>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- about section ends -->
 
 
 
@@ -233,6 +270,6 @@
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <!--custom jsnfile link -->
-<script src="C:\Users\Asus\OneDrive\Desktop\new\script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
