--- a/index.html
+++ b/index.html
@@ -246,6 +246,258 @@
 <!-- about section ends -->
 
 
+<!-- Birthdays section starts-->
+
+<section class="birthdays" id="birthdays">
+
+    <h3 class="sub-heading"> Your Birthday flower </h3>
+    <h1 class="heading"> Each months queen flower </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/january-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>January</h3>
+                <p>January’s birth flowers are the carnation and the snowdrop.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/february-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>February</h3>
+                <p>The February birth flowers are the violet and primrose</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/march-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>March</h3>
+                <p>The March birth flowers are the daffodil and the jonquil</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/april-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>April</h3>
+                <p>The April birth flowers are the daisy and the sweet pea.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/may-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>May</h3>
+                <p>The May birth flowers are the lily of the valley and hawthorn.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/june-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>June</h3>
+                <p>The June birth flowers are the rose and the honeysuckle.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/july-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>July</h3>
+                <p>The July birth flowers are the larkspur (delphinium) and the water lily.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+        
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/august-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>August</h3>
+                <p>The August birth flowers are the gladiolus and the poppy.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/september-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>September</h3>
+                <p>The September birth flowers are the aster and the morning glory.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/october-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>October</h3>
+                <p>The October birth flowers are the marigold and cosmos</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/november-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>November</h3>
+                <p>The November birth flower is the chrysanthemum. </p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="birthday flowers/november-flower.jpg" alt="">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h3>December</h3>
+                <p>The December birth flowers are the narcissus (paperwhite) and the holly</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="price">$10.99</span>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
 
 
