birthday section ends

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/january-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/january-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -277,8 +277,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/february-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/february-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -297,8 +297,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/march-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/march-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -317,8 +317,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/april-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/april-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -337,8 +337,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/may-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/may-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -357,8 +357,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/june-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/june-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -377,8 +377,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/july-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/july-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -397,8 +397,8 @@
         
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/august-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/august-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -417,8 +417,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/september-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/september-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -437,8 +437,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/october-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/october-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -457,8 +457,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/november-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/november-flower.jpg"width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
@@ -477,8 +477,8 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/november-flower.jpg" alt="">
-                <a href="#" class="fas fa-heart"></a>
+                <img src="birthday flowers/december-flower.jpg" width="700" height="500" alt="">
+                <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
                 <div class="stars">
