why section ends

--- a/index.html
+++ b/index.html
@@ -503,19 +503,19 @@
 <!-- Why Flowers section starts-->
 <section class="why" id="why">
 
-    <h3 class="sub-heading"> customer's review </h3>
-    <h1 class="heading"> what they say </h1>
+    <h3 class="sub-heading"> Reasons why flowers are loved by people </h3>
+    <h1 class="heading"> Reasons </h1>
 
-    <div class="swiper-container review-slider">
+    <div class="swiper-container why-slider">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-1.png" alt="">
+                    <img src="Images/why1.jpg" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Main reason</h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -525,15 +525,15 @@
                         </div>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat consequuntur repellendus aperiam deserunt nihil, corporis fugit voluptatibus voluptate totam neque illo placeat eius quis laborum aspernatur quibusdam. Ipsum, magni.</p>
+                <p>Flowers Are The Sweetest Things God Ever Made And Forgot To Put A Soul Into. </p>
             </div>
 
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-2.png" alt="">
+                    <img src="Images/why2.jpg" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Stress Buster </h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -543,15 +543,16 @@
                         </div>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat consequuntur repellendus aperiam deserunt nihil, corporis fugit voluptatibus voluptate totam neque illo placeat eius quis laborum aspernatur quibusdam. Ipsum, magni.</p>
+                <p> Flowers work as a mood changer. When you receive flowers, your face
+                     instantly brightens with joy!  They are proven to improve your overall worse mood and lift spirits.  </p>
             </div>
 
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-3.png" alt="">
+                    <img src="Images/why3.jpg" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Perfect Gifting Option </h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -561,15 +562,16 @@
                         </div>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat consequuntur repellendus aperiam deserunt nihil, corporis fugit voluptatibus voluptate totam neque illo placeat eius quis laborum aspernatur quibusdam. Ipsum, magni.</p>
+                <p>  Flowers are one of the best and ideal gift 
+                    options that you can present your close ones on their special occasions, moments and to lift their mood.  </p>
             </div>
 
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-4.png" alt="">
+                    <img src="Images/why4.jfif" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Healing Power </h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -579,8 +581,68 @@
                         </div>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat consequuntur repellendus aperiam deserunt nihil, corporis fugit voluptatibus voluptate totam neque illo placeat eius quis laborum aspernatur quibusdam. Ipsum, magni.</p>
+                <p>  Flowers have many powers beyond beauty and emotions. 
+                    Withholding many meanings and sentiments, they have been known to help cure medical diseases for many centuries now. </p>
             </div>
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="Images/why5.jfif" alt="">
+                    <div class="user-info">
+                        <h3>Unique Fragrance They Hold </h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p> Different flowers hold a different fragrance. Many of you do gardening
+                     outside your home or decor your living area with flowers. </p>
+            </div>
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="Images/why6.jfif" alt="">
+                    <div class="user-info">
+                        <h3>Give Words To Emotions</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p> People would give their loved ones beautiful flowers to express their feelings of admiration and love. 
+                    For years blossoms have been used as a way to send unspoken messages of the heart.  </p>
+            </div>
+
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="Images/why7.jpg" alt="">
+                    <div class="user-info">
+                        <h3>Different Shades</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p> Nature gives us a beautiful gift, “flowers.” Different flowers have different colors, 
+                    and every color defines various meanings.</p>
+            </div>
+
+
+
+        
 
         </div>
 
