--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <header>
     <a href="#" class = "logo"><i class="fas fa-seedling"></i> flora.</a>
     <nav class="navbar">
-        <a class="active" href="#home">home</a>
+        <a class="active" href="#home">Home</a>
         <a href="#flowers">Bouquets</a>
-        <a href="#about">about</a>
-        <a href="#birthdays">birthdays</a>
+        <a href="#about">About</a>
+        <a href="#birthdays">Birthdays</a>
         <a href="#why">Why Flowers?</a>
-        <a href="#order">order</a>
+        <a href="#order">Order</a>
 
     </nav>
 
@@ -675,14 +675,14 @@
                 <input type="text" placeholder="enter boutique number">
             </div>
             <div class="input">
-                <span>additional food</span>
+                <span>additional beauty</span>
                 <input type="test" placeholder="extra with flowers">
             </div>
         </div>
         <div class="inputBox">
             <div class="input">
-                <span>how musch</span>
-                <input type="number" placeholder="how many orders">
+                <span>how many </span>
+                <input type="number" placeholder="how many">
             </div>
             <div class="input">
                 <span>date and time</span>
@@ -708,7 +708,51 @@
 
 <!-- order section ends -->
 
+<!-- footer section starts  -->
 
+<section class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>locations</h3>
+            <a href="#">uzbekistan</a>
+            <a href="#">japan</a>
+            <a href="#">russia</a>
+            <a href="#">USA</a>
+            <a href="#">france</a>
+        </div>
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#">Home</a>
+            <a href="#">Boutique</a>
+            <a href="#">About</a>
+            <a href="#">Birthdays</a>
+            <a href="#">review</a>
+            <a href="#">Order</a>
+        </div>
+
+        <div class="box">
+            <h3>follow us</h3>
+            <a href="#">facebook</a>
+            <a href="#">twitter</a>
+            <a href="#">instagram</a>
+            <a href="#">linkedin</a>
+        </div>
+
+    </div>
+
+    <div class="credit"> web technology <span>00012251</span> </div>
+
+</section>
+
+<!-- footer section ends -->
+
+<!-- loader part  -->
+<div class="loader-container">
+    <img src="/Images/Logo.png" alt="">
+</div>
 
 
 
