--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
                 <img src="bouquet/bouquet1.jpg"  width= "500"  height="500" alt="">
-                <h3>Collection of flowers</h3>
+                <h3>Collection of flowers 1</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -127,7 +127,7 @@
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
                 <img src="bouquet/bouquet2.jpg"  width= "500"  height="500" alt="">
-                <h3>Collection of flowers</h3>
+                <h3>Collection of flowers 2</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -142,7 +142,7 @@
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
                 <img src="bouquet/bouquet3.jpg"  width= "500"  height="500" alt="">
-                <h3>Collection of flowers</h3>
+                <h3>Collection of flowers 3</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -157,7 +157,7 @@
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
                 <img src="bouquet/bouquet4.jpg"  width= "500"  height="500" alt="">
-                <h3>Collection of flowers</h3>
+                <h3>Collection of flowers 4</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -172,7 +172,7 @@
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
                 <img src="bouquet/bouquet5.jpg"  width= "500"  height="500" alt="">
-                <h3>Collection of flowers</h3>
+                <h3>Collection of flowers 5</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -187,7 +187,7 @@
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
                 <img src="bouquet/bouquet6.jpg"  width= "500"  height="500" alt="">
-                <h3>Collection of flowers</h3>
+                <h3>Collection of flowers 6</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -672,7 +672,7 @@
         <div class="inputBox">
             <div class="input">
                 <span>your order</span>
-                <input type="text" placeholder="enter boutique number">
+                <input type="text" placeholder="enter bouquet number">
             </div>
             <div class="input">
                 <span>additional beauty</span>
@@ -751,7 +751,7 @@
 
 <!-- loader part  -->
 <div class="loader-container">
-    <img src="/Images/Logo.png" alt="">
+    <img src="Images/Logo.png" alt="">
 </div>
 
 
