--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="roses/red-rose.png" width= "500"  height="500" alt="">
+                       <img src="roses/red rose.jpg" width= "500"  height="500" alt="">
 
                    </div>
             </div>
@@ -751,7 +751,7 @@
 
 <!-- loader part  -->
 <div class="loader-container">
-    <img src="Images/Logo.png" alt="">
+    <img src="Images/Drawing flower.gif" alt="">
 </div>
 
 
